--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -38,7 +38,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's AI</div>
+        <div class="text">StarlightAI</div>
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Enter your prompt here...">
