--- a/general/pages/credits.html
+++ b/general/pages/credits.html
@@ -37,7 +37,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's Credits</div>
+        <div class="text">Credits</div>
         <br>
        
     </body>
