--- a/general/pages/faq.html
+++ b/general/pages/faq.html
@@ -37,7 +37,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's FAQ</div>
+        <div class="text">FAQ</div>
         <br>
        
     </body>
