--- a/general/pages/search.html
+++ b/general/pages/search.html
@@ -37,7 +37,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's Search</div>
+        <div class="text">Search/Proxy</div>
         <br>
         <br>
         <center>
