--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -37,7 +37,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's Settings</div>
+        <div class="text">Settings</div>
         <br>
         <div id="settingsContainer">
             <div class="settingsColumn">
