--- a/general/index.html
+++ b/general/index.html
@@ -23,8 +23,10 @@
   gtag('config', 'G-36EM66LHER');
 </script>
     </head>
-    <body style="overflow: hidden;">
-      
+    <body>
+        <div class="custom-cursor"></div>
+        <script src="/general/js/global.js"></script>
+
 <script src="/general/js/eruda.js"></script>
 <script>eruda.init();</script>
         <div id="particles-js"></div>
