--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -67,7 +67,7 @@
             </div>
             <div class="settingsColumn">
                 <center><h1>About:blank</h1></center>
-              
+                <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
             </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
