--- a/general/pages/suggestions.html
+++ b/general/pages/suggestions.html
@@ -24,6 +24,8 @@
 </script>
     </head>
     <body>
+        <div class="custom-cursor"></div>
+        <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
             <a href="/general/index.html" class="left-link">Starlight</a>
