--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
     <div class="loading-container">
         <div class="spinner"></div>
+        Redirecting...
     </div>
 </body>
 </html>
@@ -53,7 +54,7 @@
 <script>
     // Redirect to index.html after a short delay
 setTimeout(function() {
-    window.location.href = '/general/index.html';
+    window.location.href = '/general/main.html';
 }, 1500); // Redirects after 1 second
 
 </script>
