--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -58,6 +58,7 @@
            <br>
            <center> 
             <a href="/general/pages/search.html"><button class="button">Search</button></a>&nbsp;&nbsp;&nbsp;
+            <a href=" " target="_blank"><button class="button">Infamy Network</button></a>&nbsp;&nbsp;&nbsp;
            </center>
        <br>
        <br>
@@ -147,3 +148,4 @@
         });
         
         </script>
+        <script src="/general/js/settings.js"></script>
