--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -144,4 +144,5 @@
           // Show your custom install button
         });
         
-        </script>
+        </script>      
+          <script src="/general/js/settings.js"></script>
