--- a/general/pages/reportbugs.html
+++ b/general/pages/reportbugs.html
@@ -121,3 +121,4 @@
         
         </script>
         <script src="/general/js/ai.js"></script>
+        <script src="/general/js/settings.js"></script>
