--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -46,14 +46,15 @@
                 <input type="text" id="docTitleInput" placeholder="Enter document title">
                 
                 <input type="text" id="faviconInput" placeholder="Enter favicon URL">
-                <button id="saveTitleFaviconButton">Save Title and Favicon</button>
+                <button id="saveTitleFaviconButton">Save</button>
             </div>
             <div class="settingsColumn">
                 <center><h1>Custom Themes</h1></center>
-                <input type="color" id="bgColorInput">
-                <button id="saveBgColorButton">Save Background Color</button>
                 <br>
-                <button id="resetBgColorButton" class="reset-button">Reset Background Color</button>
+                <input type="color" id="bgColorInput">
+                <button id="saveBgColorButton">Save</button>
+                <br>
+                <button id="resetBgColorButton" class="reset-button">Reset</button>
             </div>
             <div class="settingsColumn">
                 <center><h1>Tab Cloak</h1></center>
@@ -63,11 +64,13 @@
                     <option value="https://example.com/favicon1.ico">Favicon 1</option>
                     <option value="https://example.com/favicon2.ico">Favicon 2</option>
                 </select>
-                <button id="saveFaviconSelectButton">Save Selected Favicon</button>
+                <button id="saveFaviconSelectButton">Save</button>
             </div>
             <div class="settingsColumn">
                 <center><h1>About:blank</h1></center>
+                <center>
                 <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
+                </center>
             </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
