--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -179,3 +179,4 @@
         </script>
         <script src="/general/js/filtergames.js"></script>
         <script src="/general/js/search.js"></script>
+        <script src="/general/js/settings.js"></script>
