--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -127,3 +127,4 @@
         
         </script>
         <script src="/general/js/ai.js"></script>
+        <script src="/general/js/settings.js"></script>
