--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -213,3 +213,4 @@
         </script>
         <script src="/general/js/filtergames.js"></script>
         <script src="/general/js/search.js"></script>
+        <script src="/general/js/settings.js"></script>
