--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -157,3 +157,4 @@
         </script>
         <script src="/general/js/filtergames.js"></script>
         <script src="/general/js/search.js"></script>
+        <script src="/general/js/settings.js"></script>
