--- a/general/pages/suggestions.html
+++ b/general/pages/suggestions.html
@@ -122,3 +122,4 @@
         
         </script>
         <script src="/general/js/ai.js"></script>
+        <script src="/general/js/settings.js"></script>
