--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -21,6 +21,53 @@
 
   gtag('config', 'G-36EM66LHER');
 </script>
+<style>
+            /* Toggle switch styles */
+            .toggle {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        .toggle input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(26px);
+        }
+</style>
     </head>
     <body>
         <div id="particles-js"></div>
@@ -49,14 +96,6 @@
                 <button id="saveTitleFaviconButton">Save</button>
             </div>
             <div class="settingsColumn">
-                <center><h1>Custom Themes</h1></center>
-                <br>
-                <input type="color" id="bgColorInput">
-                <button id="saveBgColorButton">Save</button>
-                <br>
-                <button id="resetBgColorButton" class="reset-button">Reset</button>
-            </div>
-            <div class="settingsColumn">
                 <center><h1>Tab Cloak</h1></center>
                 <select id="faviconSelectInput">
             
@@ -68,6 +107,12 @@
             </div>
             <div class="settingsColumn">
                 <center><h1>About:blank</h1></center>
+                <center>
+                    <label class="toggle">
+                        <input type="checkbox" id="togglePopup">
+                        <span class="slider"></span>
+                    </label>
+                </center>
                 <center>
                 <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
                 </center>
