--- a/general/pages/suggestions.html
+++ b/general/pages/suggestions.html
@@ -41,7 +41,20 @@
         <br>
         <br>
         <br>
-      <iframe src="" class="iframe"></iframe>
+<h1 class="text">Suggestions</h1>
+<br>
+<form onsubmit="sendContact(event)" id="forms">
+  <div class="mb-3">
+    <input type="text" class="form-control" id="emailInput" placeholder="Enter the Apps name">
+  </div>
+  <br>
+  <div class="mb-3">
+    <input type="text" class="form-control" id="messageInput"  placeholder="Enter the URL">
+  </div>
+  <br>
+  <br>
+  <button type="submit" class="btn btn-primary" id="mom">Submit</button>
+</form>
     </body>
   
 </html><script src="/general/js/cloak.js"></script>
