--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -39,7 +39,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's Utilities</div>
+        <div class="text">Utilities/Apps</div>
         <br>
         <center>
             <select id="categorySelect">
@@ -95,6 +95,149 @@
                     <div class="description">
                         <h2>Doge Unblocker</h2>
                         <p>Very fast proxy site better than interstellar</p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <br>
+                <center>The game covers below come in later updates</center>
+                <br>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/imgs/imgs/  ">
+                    <div class="description">
+                        <h2></h2>
+                        <p>  </p> <!-- Shortened description --></a>
                     </div>
                 </div>
             </div>
