--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -40,7 +40,7 @@
         <br>
         <br>
         <br>
-        <center><h1 class="text">Starlight's Dashboard</h1></center>
+        <center><h1 class="text">Dashboard</h1></center>
 
         <center> 
             <a href="/general/pages/arcade.html"><button class="button">Arcade</button></a>&nbsp;&nbsp;&nbsp;
