--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -131,7 +131,7 @@
                         <p>Puzzle game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
-      <hr>
+<div style="display: none;">
                 <div class="column" data-category="">
                     <a href=""><img src="/img/imgs/imgs/  ">
                     <div class="description">
@@ -2932,6 +2932,8 @@
                         <p>  </p> <!-- Shortened description --></a>
                     </div>
                 </div>
+                </div>
+            
             </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
