--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -75,7 +75,7 @@
                         <p>THE bay harbour BUTCHER</p> <!-- Shortened description --></a>
                     </div>
                 </div>
-                <hr>
+                <div style="display: none;">
                 <div class="column" data-category="">
                     <a href=""><img src="/img/imgs/imgs/  ">
                     <div class="description">
@@ -286,6 +286,7 @@
                         <p>  </p> <!-- Shortened description --></a>
                     </div>
                 </div>
+            </div>
             </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
