--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -97,7 +97,7 @@
                         <p>Very fast proxy site better than interstellar</p> <!-- Shortened description --></a>
                     </div>
                 </div>
-                <hr>
+                <div style="display: none;">
                 <div class="column" data-category="">
                     <a href=""><img src="/img/imgs/imgs/  ">
                     <div class="description">
@@ -238,6 +238,7 @@
                         <p>  </p> <!-- Shortened description --></a>
                     </div>
                 </div>
+            </div>
             </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
