--- a/general/pages/login.html
+++ b/general/pages/login.html
@@ -102,9 +102,12 @@
         <br>
         <br>
         <br>
-       
+        <br>
+        <br>
+        <br>
+        <br>
 <div class="container auth-section">
-    <h1>Login Page</h1>
+    <h1>Login</h1>
     <input type="text" class="input-field login-username" placeholder="Username" required>
     <input type="password" class="input-field login-password" placeholder="Password" required>
     <button class="button-small button-green" onclick="login()">Login</button>
@@ -112,7 +115,7 @@
 </div>
 
 <div class="container signup-section" style="display:none;">
-    <h1>Sign Up Page</h1>
+    <h1>Sign Up</h1>
     <input type="text" class="input-field signup-username" placeholder="Username" required>
     <input type="password" class="input-field signup-password" placeholder="Password" required>
     <button class="button-small button-green" onclick="signup()">Sign Up</button>
@@ -121,8 +124,8 @@
 </div>
 
 <div class="container profile-section" style="display:none;">
-    <h1>Your Profile</h1>
-    <img id="profile-icon" src="default-icon.png" alt="Profile Icon" width="100">
+    <h1>Profile</h1>
+    <img id="profile-icon" src="/img/imgs/imgs/defaultprofile.png" alt="Profile Icon" width="100">
     <input type="file" class="input-field icon-upload" onchange="uploadIcon()">
     <input type="text" class="input-field profile-name" placeholder="Name">
     <textarea class="textarea-field profile-bio" placeholder="Bio"></textarea>
