--- a/general/pages/login.html
+++ b/general/pages/login.html
@@ -30,11 +30,12 @@
             max-width: 400px;
             margin: 0 auto;
             padding: 20px;
-            background: white;
+            background: rgb(46, 46, 46);
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .input-field, .textarea-field {
+            outline: none;
             display: block;
             margin: 10px 0;
             padding: 10px;
@@ -47,7 +48,7 @@
             cursor: pointer;
             border: none;
             border-radius: 4px;
-            width: 48%;
+            width: 100%;
             margin: 1%; /* Small margin for spacing */
         }
         .button-green {
@@ -68,7 +69,7 @@
             display: flex;
             justify-content: space-between; /* Align buttons in the same row */
         }
-        img {
+       .container img {
             margin: 10px 0;
             display: block;
             margin-left: auto;
@@ -97,8 +98,13 @@
                 <a href="/general/pages/ai.html"><img src="/img/ai.png" height="12px" width="12px">&nbsp;AI</a>
                 <a href="/general/pages/search.html"><img src="/img/search.png" height="12px" width="12px">&nbsp;Search</a>
                 <a href="/general/pages/settings.html"><img src="/img/settings.png" height="12px" width="12px">&nbsp;Settings</a>
+                <a href="/general/pages/login.html"><img src="/img/user.png" height="12px" width="12px">&nbsp;Login</a>
             </div>
         </nav>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
