--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -77,14 +77,14 @@
               <br>
               <div class="row">
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/1.png">
+                    <a href="/misc/games/1.html"><img src="/img/imgs/imgs/1.png">
                     <div class="description">
                         <h2>1</h2>
                         <p>Simple puzzle game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/1v1.jpeg">
+                    <a href="/misc/games/1v1lol.html"><img src="/img/imgs/imgs/1v1.jpeg">
                     <div class="description">
                         <h2>1v1.lol</h2>
                         <p>Simple Battle royale game</p> <!-- Shortened description --></a>
