--- a/general/pages/login.html
+++ b/general/pages/login.html
@@ -52,18 +52,18 @@
             margin: 1%; /* Small margin for spacing */
         }
         .button-green {
-            background-color: #5cb85c;
+            background-color: #3c3c3c;
             color: white;
         }
         .button-green:hover {
-            background-color: #4cae4c;
+            background-color: #2d2d2d;
         }
         .button-red {
-            background-color: #d9534f;
+            background-color: #545454;
             color: white;
         }
         .button-red:hover {
-            background-color: #c9302c;
+            background-color: #2e2e2e;
         }
         .button-container {
             display: flex;
