--- a/misc/games/1.html
+++ b/misc/games/1.html
@@ -48,7 +48,7 @@
         .copy-button {
             margin-left: 10px;
             padding: 5px 10px;
-            background-color: #007BFF;
+            background-color: #777777;
             color: white;
             border: none;
             border-radius: 5px;
@@ -82,13 +82,13 @@
   
   .controls {
   gap:0.1px;
-    padding-bottom:5px;
-      padding-top:5px;
+  padding-top: 12px;
+  padding-bottom: 12px;
       display: flex;
       align-items: center;
       justify-content: flex-start;
       width: 65vw;
-      height: 10vh;
+      height: 5vh;
       background-color: #121212;
       border-bottom-left-radius: 15px;
       border-bottom-right-radius: 15px;
