--- a/general/index.html
+++ b/general/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Home</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
         <link rel="icon" href="/img/starlight.png">
-        <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy">
+        <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy, games unblocked, youtube unblocked, tiktok unblocked, youtube, tiktok, how to play unblocked games at school, games, online games, fortnite games unblocked, nowgg unblocked, nowgg alt links, nowgg, geforce now unblocked, geforcenow, geforce unblocked, geforcenow unblocked, geforce unblocked, play games, unblocked games for school,">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Starlight">
         <link rel="manifest" href="/manifest.json">
@@ -44,7 +44,7 @@
         <br>
         <br>
         <br>
-        <div class="text">Welcome to Starlight</div>
+        <h1 class="text">Welcome to Starlight</h1>
         <div id="splash">UNKNOWN</div>
         <br>
         <center>
@@ -160,10 +160,23 @@
        'most basic ubg site ever',
        'Entertopia is ass compared to this',
        'these games are so good',
-       'very lightweight site',
-       'this is closed source',
+       'very lightweight site(for now)',
+       'this is closed source (for now)',
        'anyone who says this site is ass is lying',
-       'tell this site to everyone you know'
+       'tell this site to everyone you know',
+       'fein fein fein',
+       'ADS OPEN FOR SALE PLEASE BUY',
+       'youtube is unblocked for me',
+       'you found secret 1',
+       'im in the thick of it',
+       'everybody knows',
+       'they know me where it snows',
+       'i skied in and they froze',
+       'I dont know no nothing bout no ice im just cold',
+       'Forty something milli subs or so, Ive been told',
+       'from the screen to the ring to the pen to the king',
+       'wheres my crown thats my bling',
+       'always drama when i ring'
      ]
      
      document.getElementById('splash').innerText = splashtext[Math.floor(Math.random() * splashtext.length)]
