--- a/general/pages/altlinks.html
+++ b/general/pages/altlinks.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Alt links</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
@@ -47,7 +47,8 @@
             https://starlighttt.netlify.app<br>
          
             </h4>
-       
+       <br>
+       <br>
     </body>
     <script src="/general/js/cloak.js"></script>
 </html>
