--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Dasboard</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
@@ -53,7 +53,7 @@
            <center> 
             <a href="/general/pages/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/credits.html"><button class="button">Credits</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/terms.html" target="_blank"><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/general/pages/terms.html"><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/policy.html"><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
            </center>
            <br>
@@ -77,7 +77,8 @@
         <a href="/general/pages/suggestions.html"><button class="button">Suggestions</button></a>&nbsp;&nbsp;&nbsp;
         <a href="/general/pages/reportbugs.html"><button class="button">Report Bugs</button></a>&nbsp;&nbsp;&nbsp;
        </center>
-     
+     <br>
+     <br>
     </body><script src="/general/js/cloak.js"></script>
 </html>
     <!-- Include Particle.js library -->
