--- a/general/pages/faq.html
+++ b/general/pages/faq.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <title>Starlight - FAQ</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
         <link rel="icon" href="/img/starlight.png">
