--- a/general/pages/login.html
+++ b/general/pages/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Login</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
@@ -48,7 +48,7 @@
             cursor: pointer;
             border: none;
             border-radius: 4px;
-            width: 100%;
+            width: 90%;
             margin: 1%; /* Small margin for spacing */
         }
         .button-green {
