--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Media</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
@@ -40,7 +40,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Media/Movies</div>
+        <div class="text">>Starlight's Media/Movies</div>
         <br>
         <center>
             <select id="categorySelect">
