--- a/general/pages/search.html
+++ b/general/pages/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Search</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
@@ -41,7 +41,7 @@
         <br>
         <br>
         <br>
-        <div class="text">Search/Proxy</div>
+        <div class="text">Starlight's Search/Proxy</div>
         <br>
         <center>
             <form id="uv-form">
@@ -63,6 +63,7 @@
 <script src="/static/search.js" defer></script>
 <script src="/static/index.js" defer></script>
 <script src="/static/error.js" defer></script>
+<script src="/static/embed.js"></script>
 </html>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
