--- a/general/pages/terms.html
+++ b/general/pages/terms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Terms</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
@@ -50,7 +50,7 @@
             </h2>
             <br>
             <br>
-            <div style="font-family: sans-serif;">
+            <div>
             Last updated on Monday, july 29, 2024
             </div>
             </div>
