--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Starlight - Utilities</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
@@ -40,7 +40,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Utilities/Apps</div>
+        <div class="text">Starlight's Utilities/Apps</div>
         <br>
         <center>
             <select id="categorySelect">
@@ -63,29 +63,29 @@
               </div>
               <br>
               <div class="row">
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/youtube.jpeg">
+                <div class="column" data-category="Social">
+                    <a href="/misc/apps/youtube.html"><img src="/img/imgs/imgs/youtube.jpeg">
                     <div class="description">
                         <h2>Youtube</h2>
                         <p>videos stuff</p> <!-- Shortened description --></a>
                     </div>
                 </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/lagged.avif">
+                <div class="column" data-category="Other">
+                    <a href="/misc/apps/lagged.html"><img src="/img/imgs/imgs/lagged.avif">
                     <div class="description">
                         <h2>Lagged.com</h2>
                         <p>GAMING WEBSITE</p> <!-- Shortened description --></a>
                     </div>
                 </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/wrnd.png">
+                <div class="column" data-category="Proxy">
+                    <a href="/misc/apps/equinox.html"><img src="/img/imgs/imgs/wrnd.png">
                     <div class="description">
                         <h2>Equinox</h2>
                         <p>Very fast proxy site</p> <!-- Shortened description --></a>
                     </div>
                 </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/doge.jpg">
+                <div class="column" data-category="Proxy">
+                    <a href="/misc/apps/dogeunblocker.html"><img src="/img/imgs/imgs/doge.jpg">
                     <div class="description">
                         <h2>Doge Unblocker</h2>
                         <p>Very fast proxy site better than interstellar</p> <!-- Shortened description --></a>
