--- a/404.html
+++ b/404.html
@@ -39,7 +39,8 @@
         <br>
         <div class="text">404</div>
         <div id="tiger">If you came upon this page by mistake, try checking the URL in your web browser.</div> 
-      <div id="tiger" >If you used the proxy and came upon this page just refresh the page.</div> <br> <center>
+      <div id="tiger" >If you used the proxy and came upon this page register the proxy by refreshing.</div> <br>
+      <div id="tiger">If you used the shortcuts and came upon this page go to search or main page then register the proxy there.</div> <center>
                 <button onclick="window.location.reload();" id="type">Refresh Page</button>
                 </center>
     </body>
