--- a/general/index.html
+++ b/general/index.html
@@ -44,7 +44,7 @@
         <br>
         <br>
         <br>
-        <h1 class="text">Welcome to Starlight</h1>
+        <div class="text">Welcome to Starlight</div>
         <div id="splash">UNKNOWN</div>
         <br>
         <center>
