--- a/general/pages/altlinks.html
+++ b/general/pages/altlinks.html
@@ -42,7 +42,7 @@
         <br>
         <div class="text">Alt Links</div>
         <br>
-        <h4 style="font-family: sans-serif; text-align: center; margin: 5px;">                 
+        <h4 style="font-family: sans-serif; text-align: center; margin: 5px;  user-select: all;">                 
             https://starlight.vercel.app<br>
             https://starlighttt.netlify.app<br>
          
