--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -53,9 +53,9 @@
                 <center><h1>Tab Cloak</h1></center>
                 <select id="faviconSelectInput">
             
-                    <option value="">--Select Favicon--</option>
-                    <option value="https://example.com/favicon1.ico">Favicon 1</option>
-                    <option value="https://example.com/favicon2.ico">Favicon 2</option>
+                    <option value="/img/starlight.png">--Select Favicon--</option>
+                    <option value="/img/favicons/google.png">Google.com</option>
+                    <option value=" ">Favicon 2</option>
                 </select>
                 <button id="saveFaviconSelectButton">Save</button>
             </div>
