--- a/general/pages/proxylinks.html
+++ b/general/pages/proxylinks.html
@@ -42,7 +42,7 @@
         <br>
         <div class="text">Proxy Links</div>
         <br>
-        <h4 style="font-family: sans-serif; text-align: center; margin: 5px;">                 
+        <h4 style="font-family: sans-serif; text-align: center; margin: 5px;   user-select: all;">                 
             https://classroom.weeb-central.us/<br>
             https://direct.weeb-central.us/<br>
             https://cloudflare.rammerhead.org/<br>
